--- a/src/pages/interactive-map/index.html
+++ b/src/pages/interactive-map/index.html
@@ -13,42 +13,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Comme:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../styles/global.css">
   <link rel="stylesheet" href="map.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 
-<body>
-  <!-- Navbar fixa -->
-  <header class="navbar">
-    <button class="btn voltar">← Voltar</button>
-  </header>
+<header class="navbar">
+  <button class="btn voltar">← voltar</button>
+</header>
 
-  <!-- Container principal -->
-  <main class="map-container">
-    <div class="map-pan" id="map-pan">
-      <img src="../../assets/img/map/mapa-ifba.svg" alt="Mapa IFBA" class="map" id="map-img">
+<div id="map"></div>
 
-      <!-- Pins -->
-      <div class="pin" style="top: 6%; left: 7%"></div> <!-- Entrada -->
-      <div class="pin" style="top: 18%; left: 32%"></div> <!-- Estacionamento I -->
-      <div class="pin" style="top: 12%; left: 78%"></div> <!-- Estacionamento II -->
-      <div class="pin" style="top: 72%; left: 86%"></div> <!-- Estacionamento III -->
-      <div class="pin" style="top: 28%; left: 14%"></div> <!-- Campo -->
-      <div class="pin" style="top: 46%; left: 14%"></div> <!-- Quadra -->
-      <div class="pin" style="top: 65%; left: 14%"></div> <!-- Quadra de Areia -->
-      <div class="pin" style="top: 40%; left: 36%"></div> <!-- Bloco 06 -->
-      <div class="pin" style="top: 39%; left: 50%"></div> <!-- Bloco 05 -->
-      <div class="pin" style="top: 55%; left: 36%"></div> <!-- Bloco 08 -->
-      <div class="pin" style="top: 60%; left: 50%"></div> <!-- Bloco 09 -->
-      <div class="pin" style="top: 52%; left: 62%"></div> <!-- Cantina -->
-      <div class="pin" style="top: 32%; left: 62%"></div> <!-- Auditório -->
-      <div class="pin" style="top: 70%; left: 65%"></div> <!-- Bloco 16 -->
-      <div class="pin" style="top: 82%; left: 75%"></div> <!-- Biblioteca -->
-      <div class="pin" style="top: 55%; left: 45%"></div> <!-- Cores -->
-    </div>
-  </main>
-
-  <!-- Biblioteca Panzoom -->
-  <script src="https://unpkg.com/@panzoom/panzoom/dist/panzoom.min.js"></script>
-  <script src="map.js"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="map.js"></script>
 </body>
 
 </html>
