--- a/src/pages/interactive-map/index.html
+++ b/src/pages/interactive-map/index.html
@@ -22,6 +22,26 @@
 
 <div id="map"></div>
 
+<div id="infoModal" class="modal">
+  <div class="modal-content">
+    <span class="close-btn">&times;</span>
+      <div id="modal-body">
+        <div class="topo-local">
+          <div class="foto-local">
+            <span>Foto Local</span>
+          </div>
+          <div class="descricao-local">
+            <span>Descrição Local</span>
+          </div>
+          </div>
+            <div class="comentarios-local">
+          <span>Comentario Local</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script src="map.js"></script>
 </body>
