refactor: Update styles and structure for header and main sections, improve responsiveness and accessibility

--- a/src/index.html
+++ b/src/index.html
@@ -16,44 +16,58 @@
 </head>
 
 <body>
-
-    <!-- ===== MAIN ===== -->
     <main>
-        <!-- Bloco azul principal -->
         <section class="blue-block-main">
-            <h1>Mapa de Acessibilidade</h1>
-            <p>Encontre e avalie os meios de Acessibilidade do IFBA Campus Eunápolis</p>
-            <button class="explorar-mapa-btn">Explorar mapa</button>
+            <div class="section-text">
+                <h1>Mapa de Acessibilidade</h1>
+                <p>Encontre e avalie os meios de Acessibilidade do IFBA Campus Eunápolis</p>
+            </div>
+            <a href="pages/interactive-map/index.html" class="explorar-mapa-btn">Explorar mapa</a>
         </section>
 
-        <!-- Comentários -->
-        <section id="page-comentarios">
-            <!-- Título dos comentários -->
-            <div id="title-comentarios">
+        <section class="page-comentarios">
+            <div class="title-comentarios">
                 <p>Avaliações recentes</p>
             </div>
 
-            <!-- Cards de comentários -->
-            <div class="comentario-usuario">
-                <a class="comentario-local" href="#biblioteca">Biblioteca</a>
-                <div class="comentario-nota">Nota: 1/5</div>
-                <div class="comentario-nome">Usuário 1</div>
-                <div class="comentario-texto">Ótimo mapa, muito útil!</div>
-            </div>
+            <a href="#biblioteca">
+                <div class="comentario-usuario">
+                    <div class="title">
+                        <div class="comentario-local">Biblioteca</div>
+                        <div class="comentario-nota">Nota: 1/5</div>
+                    </div>
+                    <div class="text">
+                        <div class="comentario-nome">Usuário 1</div>
+                        <div class="comentario-texto">Ótimo mapa, muito útil!</div>
+                    </div>
+                </div>
+            </a>
 
-            <div class="comentario-usuario">
-                <a class="comentario-local" href="#auditorio">Auditório</a>
-                <div class="comentario-nota">Nota: 2/5</div>
-                <div class="comentario-nome">Usuário 2</div>
-                <div class="comentario-texto">Bom acesso, mas pode melhorar.</div>
-            </div>
+            <a href="#auditorio">
+                <div class="comentario-usuario">
+                    <div class="title">
+                        <div class="comentario-local">Auditório</div>
+                        <div class="comentario-nota">Nota: 2/5</div>
+                    </div>
+                    <div class="text">
+                        <div class="comentario-nome">Usuário 2</div>
+                        <div class="comentario-texto">Bom acesso, mas pode melhorar.</div>
+                    </div>
+                </div>
+            </a>
 
-            <div class="comentario-usuario">
-                <a class="comentario-local" href="#refeitorio">Refeitório</a>
-                <div class="comentario-nota">Nota: 3/5</div>
-                <div class="comentario-nome">Usuário 3</div>
-                <div class="comentario-texto">Acessível, mas falta sinalização.</div>
-            </div>
+            <a href="#refeitorio">
+                <div class="comentario-usuario">
+                    <div class="title">
+                        <div class="comentario-local">Refeitório</div>
+                        <div class="comentario-nota">Nota: 3/5</div>
+                    </div>
+                    <div class="text">
+                        <div class="comentario-nome">Usuário 3</div>
+                        <div class="comentario-texto">Acessível, mas falta sinalização.</div>
+                    </div>
+                </div>
+            </a>
         </section>
     </main>
 
