--- a/src/pages/interactive-map/index.html
+++ b/src/pages/interactive-map/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <header class="navbar">
-  <button class="btn voltar">← voltar</button>
+  <a href="../../index.html" class="btn voltar">← voltar</a>
 </header>
 
 <div id="map"></div>
