--- a/src/pages/interactive-map/index.html
+++ b/src/pages/interactive-map/index.html
@@ -23,46 +23,45 @@
 <div id="map"></div>
 
 <div id="infoModal" class="modal">
-  <div class="modal-content">
-    <span class="close-btn">&times;</span>
-    <div id="modal-body">
-      <div class="topo-local">
+    <div class="modal-content">
+      <span class="close-btn">&times;</span>
+      <div id="modal-body">
+        <!-- Foto Local -->
         <div class="foto-local">
-          <!-- Carousel integrado -->
           <section id="projetos">
             <h2>Meus Projetos</h2>
             <div class="carousel-container">
-                <button class="carousel-btn left">❮</button>
-                <div class="carousel">
-                  <div class="carousel-track">
-                    <div class="project-card">
-                      <img src="/src/assets/img/map/section-map/foto-local.jpeg" alt="Projeto 1" />
-                    </div>
-                    <div class="project-card">
-                      <img src="/src/assets/img/map/section-map/foto-local-2.jpeg" alt="Projeto 2" />
-                    </div>
-                    <div class="project-card">
-                      <img src="/src/assets/img/map/section-map/foto-local-3.jpeg" alt="Projeto 3" />
-                    </div>
+              <button class="carousel-btn left">❮</button>
+              <div class="carousel">
+                <div class="carousel-track">
+                  <div class="project-card">
+                    <img src="/src/assets/img/map/section-map/foto-local.jpeg" alt="Projeto 1" />
+                  </div>
+                  <div class="project-card">
+                    <img src="/src/assets/img/map/section-map/foto-local-2.jpeg" alt="Projeto 2" />
+                  </div>
+                  <div class="project-card">
+                    <img src="/src/assets/img/map/section-map/foto-local-3.jpeg" alt="Projeto 3" />
                   </div>
                 </div>
-                <button class="carousel-btn right">❯</button>
               </div>
+              <button class="carousel-btn right">❯</button>
             </div>
           </section>
         </div>
 
+        <!-- Descrição Local -->
         <div class="descricao-local">
           <span>Descrição Local</span>
         </div>
-      </div>
 
-      <div class="comentarios-local">
-        <span>Comentario Local</span>
+        <!-- Comentários Local -->
+        <div class="comentarios-local">
+          <span>Comentário Local</span>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script src="map.js"></script>
