versao 1.0 integração com o back

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,8 @@
                 </div>
             </a>
 
+            <button class="btn-api" onclick="fetchData()">Adicionar Comentário</button>
+
             <a href="#refeitorio">
                 <div class="comentario-usuario">
                     <div class="title">
