--- a/src/pages/interactive-map/index.html
+++ b/src/pages/interactive-map/index.html
@@ -120,7 +120,7 @@
 
         <!-- Botões de Ação -->
         <div class="action-buttons">
-          <button class="comment-btn">Adicionar Comentario</button>
+          <button class="btn-api" onclick="fetchData()">Adicionar Comentário</button>
         </div>
       </section>
       </div>
@@ -156,6 +156,7 @@
   </div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="api.js"></script>
 <script src="map.js"></script>
 <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 <script src="script.js"></script>
