Enhance interactive map functionality with location data fetching and logging

--- a/src/pages/interactive-map/index.html
+++ b/src/pages/interactive-map/index.html
@@ -22,6 +22,7 @@
 
 <header class="navbar">
   <a href="../../index.html" class="btn voltar">← voltar</a>
+  <button class="btn todos-pins" onclick="logAllPins()">Todos Pins</button>
 </header>
 
 <div id="map"></div>
@@ -57,7 +58,7 @@
 
         <!-- Informações -->
         <section class="info-section">
-        <h1>Rampa</h1>
+        <h1 id="location-title">Rampa</h1>
         <div class="rating">
           <span>Nota: </span>
           <div class="stars">⭐⭐⭐⭐⭐</div>
@@ -114,13 +115,13 @@
 
           <div class="tab-pane" id="description-content">
             <h3>Descrição do Local</h3>
-            <p>Este local possui uma rampa acessível, com boas condições de uso para cadeirantes e outras deficiências.</p>
+            <p id="location-description">Este local possui uma rampa acessível, com boas condições de uso para cadeirantes e outras deficiências.</p>
           </div>
         </div>
 
         <!-- Botões de Ação -->
         <div class="action-buttons">
-          <button class="btn-api" onclick="fetchData()">Adicionar Comentário</button>
+          <button class="comment-btn">Adicionar Comentário</button>
         </div>
       </section>
       </div>
@@ -160,6 +161,50 @@
 <script src="map.js"></script>
 <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 <script src="script.js"></script>
+<script>
+  // Test function for getLocations
+  window.testGetLocations = async function(skip = 0, limit = 10) {
+    console.log(`Testing getLocations with skip=${skip}, limit=${limit}`);
+    const result = await getLocations(skip, limit);
+    console.log('Result:', result);
+    return result;
+  };
+
+  // Function to log all pins
+  window.logAllPins = function() {
+    const pins = [
+      { label: 'Entrada', top: 87, left: 3.7, id: 1 },
+      { label: 'Estacionamento I', top: 75, left: 27, id: 2 },
+      { label: 'Estacionamento II', top: 80.5, left: 72.5, id: 3 },
+      { label: 'Estacionamento III', top: 42, left: 91, id: 4 },
+      { label: 'Campo', top: 66.5, left: 10.3, id: 5 },
+      { label: 'Quadra', top: 20, left: 8.3, id: 6 },
+      { label: 'Quadra de Areia', top: 7.5, left: 17.5, id: 7 },
+      { label: 'Bloco 06', top: 42.5, left: 30, id: 8 },
+      { label: 'Bloco 05', top: 45.8, left: 46.5, id: 9 },
+      { label: 'Bloco 08', top: 20, left: 30, id: 10 },
+      { label: 'Bloco 09', top: 14.8, left: 46, id: 11 },
+      { label: 'Cantina', top: 59, left: 69, id: 12 },
+      { label: 'Auditório', top: 60, left: 54.2, id: 13 },
+      { label: 'Bloco 16', top: 39, left: 78, id: 14 },
+      { label: 'Biblioteca', top: 21.5, left: 84.6, id: 15 },
+      { label: 'Cores', top: 34.5, left: 48.2, id: 16 }
+    ];
+
+    console.log('Todos os pins:');
+    pins.forEach((pin, index) => {
+      console.log(`Pin ${index + 1}:`, pin);
+    });
+  };
+
+  // Test function for getAccessibilityItems
+  window.testGetAccessibilityItems = async function() {
+    console.log('Testing getAccessibilityItems');
+    const result = await getAccessibilityItems();
+    console.log('Result:', result);
+    return result;
+  };
+</script>
 </body>
 
 </html>
