--- a/src/pages/interactive-map/index.html
+++ b/src/pages/interactive-map/index.html
@@ -170,31 +170,11 @@
     return result;
   };
 
-  // Function to log all pins
-  window.logAllPins = function() {
-    const pins = [
-      { label: 'Entrada', top: 87, left: 3.7, id: 1 },
-      { label: 'Estacionamento I', top: 75, left: 27, id: 2 },
-      { label: 'Estacionamento II', top: 80.5, left: 72.5, id: 3 },
-      { label: 'Estacionamento III', top: 42, left: 91, id: 4 },
-      { label: 'Campo', top: 66.5, left: 10.3, id: 5 },
-      { label: 'Quadra', top: 20, left: 8.3, id: 6 },
-      { label: 'Quadra de Areia', top: 7.5, left: 17.5, id: 7 },
-      { label: 'Bloco 06', top: 42.5, left: 30, id: 8 },
-      { label: 'Bloco 05', top: 45.8, left: 46.5, id: 9 },
-      { label: 'Bloco 08', top: 20, left: 30, id: 10 },
-      { label: 'Bloco 09', top: 14.8, left: 46, id: 11 },
-      { label: 'Cantina', top: 59, left: 69, id: 12 },
-      { label: 'Auditório', top: 60, left: 54.2, id: 13 },
-      { label: 'Bloco 16', top: 39, left: 78, id: 14 },
-      { label: 'Biblioteca', top: 21.5, left: 84.6, id: 15 },
-      { label: 'Cores', top: 34.5, left: 48.2, id: 16 }
-    ];
 
-    console.log('Todos os pins:');
-    pins.forEach((pin, index) => {
-      console.log(`Pin ${index + 1}:`, pin);
-    });
+  // Function to log all accessibility items
+  window.logAllPins = async function() {
+    const items = await getAccessibilityItems();
+    console.log('Accessibility Items:', items);
   };
 
   // Test function for getAccessibilityItems
