--- a/src/pages/interactive-map/index.html
+++ b/src/pages/interactive-map/index.html
@@ -157,7 +157,7 @@
   </div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-<script src="api.js"></script>
+<script src="api_map.js"></script>
 <script src="map.js"></script>
 <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 <script src="script.js"></script>
