feat(admin): implement admin authentication and comment management functionality

--- a/src/pages/admin/index.html
+++ b/src/pages/admin/index.html
@@ -82,8 +82,11 @@
     </main>
   </div>
 
-  <script src="../interactive-map/api.js"></script>
+  <script src="auth.js"></script>
+  <script src="api_auth.js"></script>
+  <script src="api_admin.js"></script>
   <script src="admin.js"></script>
+
 </body>
 
 </html>
