--- a/src/pages/admin/index.html
+++ b/src/pages/admin/index.html
@@ -14,6 +14,8 @@
   <!-- Estilos globais e específicos -->
   <link rel="stylesheet" href="../../styles/global.css">
   <link rel="stylesheet" href="admin.css">
+  <!-- Leaflet for image carousel (CRS.Simple) -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 
 <body>
@@ -57,6 +59,21 @@
     </div>
   </div>
 
+  <!-- Modal de Fotos -->
+  <div id="photoModal" class="modal">
+    <div class="modal-content photo-modal">
+      <span class="close-btn" id="photoModalClose">&times;</span>
+      <div id="photo-modal-body" class="photo-modal-body">
+        <!-- content injected by JS -->
+      </div>
+      <div class="photo-controls">
+        <button id="photoPrev" class="btn">&larr;</button>
+        <span id="photoIndex"></span>
+        <button id="photoNext" class="btn">&rarr;</button>
+      </div>
+    </div>
+  </div>
+
   <!-- Painel Administrativo (oculto inicialmente) -->
   <div id="admin-dashboard" style="display: none;">
     <header class="admin-header">
@@ -85,6 +102,7 @@
   <script src="auth.js"></script>
   <script src="api_auth.js"></script>
   <script src="api_admin.js"></script>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="admin.js"></script>
 
 </body>
