feat(admin): add toggle functionality for comment images
Implement a conditional "Fotos" button to toggle visibility of multiple images in pending comments, replacing the previous single image display with a hidden container that can be shown or hidden via JavaScript. This enhances the admin interface for better handling of comments with attached photos.

--- a/src/pages/admin/index.html
+++ b/src/pages/admin/index.html
@@ -77,6 +77,7 @@
         <h2>Avaliações Pendentes</h2>
         <div id="reviews-list" class="reviews-list">
           <!-- Avaliações serão carregadas aqui -->
+           <button class="photos-btn">Fotos</button>
         </div>
       </div>
     </main>
